src/style.css
header {
    color: rgb(255, 255, 255);
    background-color:orangered;
    border-bottom: 2px;
    border-color: orangered ;
    padding: 20px 10px;
    overflow: hidden;
}

#logo-site{
    height: 10vh;
    width: 22vw;
}

ul{
    list-style-type: none;
    padding: 0px;
    margin: 0px;
}


main {
    height: 90vh;
    width: 100vw;
    background-image: url("../media/img/index-background-computer.jpeg");
    background-repeat: no-repeat;
    background-position: center;
    background-size: 100% auto;
    filter: blur(4px);
    -webkit-filter: blur(4px);
}

footer {
    color: rgb(255, 255, 255);
    background-color:orangered;
    height: auto;
    border-bottom: 2px;
    border-color: white;
    padding: 20px 10px;
    overflow: hidden;
    text-align: center;
}

img{
    height: 30px;
    width: 30px;
}



body{
    padding: 0px;
    margin: 0px;
}

